finished up figures

--- a/oakland/protocol.tex
+++ b/oakland/protocol.tex
@@ -143,7 +143,8 @@ performance and goes directly to an exit proxy.}
 \includegraphics[width=.5\textwidth]{request_diagram_complex}
 \caption{Steps for retrieving content in \system{} when a client is prioritizing 
 privacy and proxies her request through two other clients before reaching the 
-exit proxy.}
+exit proxy.  This figure shows that the request is sent sequentially through peers, 
+and the response is sent in a multicast manner back to the clients.}
 \label{fig:retrieving2}
 \end{figure}
 
