consistent paragraph headings

--- a/oakland/abstract.tex
+++ b/oakland/abstract.tex
@@ -3,17 +3,17 @@ As publishers increasingly use Content Distribution Networks
 (CDNs) to distribute content across geographically diverse networks, 
 CDNs themselves are becoming unwitting targets of requests for both
 access to user data and content takedown. From copyright infringement to
-moderation of online speech, CDNs have found themselves at the forefront of a
+moderation of online speech, CDNs have found themselves at the forefront of
 many recent legal quandaries. At the heart of the tension, however, is the fact
 that CDNs have rich information both about the content they are serving and the
 users who are requesting that content. 
 This paper offers a technical contribution that is relevant to this ongoing tension
-with design of an Oblivious CDN (OCDN), a CDN that is both compatible with the existing
+with design of an Oblivious CDN (OCDN); the system is both compatible with the existing
 Web ecosystem of publishers and
 clients and hides from the CDN both the content it is serving and the users
 who are requesting that content. \system{} is compatible with the way that publishers
-currently host content on CDNs. Publishers can use multiple CDNs to publish content
-via \system{}; clients retrieve content through a peer-to-peer anonymizing network
+currently host content on CDNs. Using \system{}, publishers can use multiple CDNs
+to publish content; clients retrieve content through a peer-to-peer anonymizing network
 of proxies.
 Our prototype implementation and
 evaluation of \system{} show that the system can obfuscate both content and clients
