--- a/oakland/intro.tex
+++ b/oakland/intro.tex
@@ -47,7 +47,7 @@ request for content through a set of peers (\ie, other OCDN clients) in a way
 that prevents both other clients  and the CDN from learning the client
 identity or requested content requested.  After traversing one or more client
 proxies, an exit proxy transforms the URL that it receives from a client to an
-obfuscated identifier using the key that is shares with the origin server
+obfuscated identifier using the key that is shared with the origin server
 corresponding to the identifier.  Upon receiving that request from the exit
 proxy, the CDN returns the object corresponding to the object identifier; that
 object is encrypted with a key that is shared between the origin and the
