--- a/oakland/paper.tex
+++ b/oakland/paper.tex
@@ -6,7 +6,7 @@
 \usepackage{algorithmic}
 %%%%%%%%%%%%%%%%%%%%  LOCALS  %%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\newcommand{\system}{{\em OCDN}}
+\newcommand{\system}{{OCDN}}
 \def\checkmark{\tikz\fill[scale=0.4](0,.35) -- (.25,0) -- (1,.7) -- (.25,.15) -- cycle;}
 \graphicspath{ {./figures/} }
 \newcommand{\annie}[1]{\emph{\color{blue}(#1)}}
