--- a/oakland/implementation.tex
+++ b/oakland/implementation.tex
@@ -19,7 +19,8 @@ and the exit proxy; we simulate additional clients on this path by increasing $\
 \label{fig:impl}
 \end{figure}
 
-{\bf CDN.} As the design for \system{} requires encrypted content and identifiers 
+\paragraph{CDN.} As the design for \system{} requires encrypted content and identifiers
+
 to be stored in the CDN, we cannot request content from real-world CDNs.  Additionally, 
 we must evaluate the performance of \system{} in comparison to the same content, cache locations, etc., so 
 we set up a data storage server.  This is run on a Virtual Private Server (VPS) located in 
@@ -31,7 +32,8 @@ HMAC$_{k}$(file name).  We use AES with 256 bit keys for the shared key and SHA-
 hash function.  Both the plaintext files and encrypted files are stored on this web server, and 
 for the purposes of evaluating our prototype, act as a CDN in \system{}.
 
-{\bf Exit Proxy.} The exit proxy is the component that queries the CDN for encrypted 
+\paragraph{Exit Proxy.} The exit proxy is the component that queries the CDN for
+encrypted
 content on behalf of a client.  We have implemented a web proxy in Go and it runs on 
 a different VPS machine in Chicago, USA.  In addition to proxying web requests, the exit 
 proxy also provides cryptographic functionality.  When receiving a request, it rewrites
@@ -43,7 +45,8 @@ it receives a response from the CDN, it decrypts the content with the shared key
 subsequently encrypts it with the session key (both using AES 256-bit encryption).  The 
 exit then forwards the response onto the client proxy.
 
-{\bf Client Proxy.} The client proxy acts on behalf of the client who is requesting 
+\paragraph{Client Proxy.} The client proxy acts on behalf of the client who is
+requesting
 content.  This proxy uses the same implementation as the exit proxy, but provides 
 different cryptographic functions on the requests and responses.  When a client makes 
 a request, the client proxy generates a session key  (AES 256-bit) and looks up the correct exit proxy's 
