implemented some of Jen's comments

--- a/oakland/background.tex
+++ b/oakland/background.tex
@@ -75,7 +75,7 @@ they can see each client's cross site browsing patterns.  CDNs host content for 
 them to see content requests for content published by different publishers.  This gives an enormous amount of 
 knowledge to CDNs; for example, Akamai caches enough content around the world to see up to 30\% of global Internet 
 traffic~\cite{akamai_global_traffic}.  And we have seen the implications of a CDN knowing this much information when Cloudflare 
-went public with the years-long National Security Letters they had received~\cite{cloudflare_nsl}. These National Security Letters 
+went public with the National Security Letters they had received~\cite{cloudflare_nsl}. These National Security Letters 
 demand information collected by the CDN and also include a gag order, which prohibits the CDN from publicly announcing 
 the information request.  
 
