--- a/oakland/paper.bib
+++ b/oakland/paper.bib
@@ -33,6 +33,12 @@
   year={2016}
 }
 
+@misc{ars_tor,
+  title="{Cloudflare: 94 Percent of the Tor Traffic We See is ``Per Se Malicious''}",
+  key="Cloudflare",
+  howpublished = {\url{https://arstechnica.com/tech-policy/2016/03/new-data-suggests-94-percent-of-tor-traffic-is-malicious/}}
+}
+
 @phdthesis{mazieres2000self,
   title={Self-certifying file system},
   author={Mazi{\`e}res, David David Folkman},
