--- a/oakland/design.tex
+++ b/oakland/design.tex
@@ -8,8 +8,8 @@ and responses retrieved from the CDNs; and the origin servers are the content
 publishers who are customers of the CDNs.  Figure \ref{fig:ocd_overview} shows how
 these components interact in the system.  This section describes the decisions 
 made in the design of \system{}, and what functionality each decision provides.  
-We separate design decisions into two parts: 1) setup decisions and 2) request/
-response decisions.  We also highlight some additional options that the design of 
+We separate design decisions into two parts: 1) setup decisions and 2) request/response 
+decisions.  We also highlight some additional options that the design of 
 \system{} allows.
 
 \begin{figure}[t!]
@@ -31,7 +31,7 @@ keys are distributed.
 \centering
 \begin{tabular}{| l | l |} 
 \hline
- Design Decision & Functionality Provided \\
+ \multicolumn{1}{|c|}{\bf Design Decision} & \multicolumn{1}{|c|}{\bf Functionality Provided} \\
 \hline \hline
  Shared Keys & {Hides content stored on CDN cache nodes} \\
 \hline
@@ -72,7 +72,7 @@ exit proxy to request encrypted content on behalf of clients by computing the HM
 Each exit proxy stores a mapping of URLs to their associated shared key $k$; for example, if 
 an origin server has shared key $k$ and publishes a web page {\tt www.foo.com}, then an exit 
 proxy will store the mapping of {\tt www.foo.com} to $k$.  This results in the set of exit proxies 
-forming a distributed hash table where the key is the URL ({\tt www.foo.com} and the value is the 
+forming a distributed hash table where the key is the URL ({\tt www.foo.com}) and the value is the 
 shared key ($k$).  To assign (key,value) pairs to exit proxies, \system{} uses consistent 
 hashing~\cite{karger1997consistent,lewin1998consistent}.  Consistent hashing uses a hash function $H(.)$
 to generate identifiers for both exit proxies and for URLs; the identifiers are $H(exit\_ID)$ and $H(URL)$. 
@@ -97,7 +97,7 @@ of this identifier ($exit\_ID$) is {\tt IP:hostID}, where {\tt IP} is the exit p
 is a hash of the exit proxy's public key.  When an exit proxy is requesting the shared key $k$ from an origin server, 
 it sends its identifier and its public key to the origin server.  Then the origin server can hash the exit proxy's 
 public key and verify it against hostID; this acts as a proof of the exit proxy's position in the consistent hashing 
-circle, and thus prevents a proxy from lying about where it lies on the circle (and subsequently lying about which 
+circle, and thus prevents a proxy from lying about where it lies on the ring (and subsequently lying about which 
 URL's shared key it is responsible for).
 
 \paragraph{DNS for Key Sharing}
@@ -121,7 +121,7 @@ are routed from exit proxies back to the original client.
 \centering
 \begin{tabular}{| l | l |} 
 \hline
- Design Decision & Functionality Provided \\
+ \multicolumn{1}{|c|}{\bf Design Decision} & \multicolumn{1}{|c|}{\bf Functionality Provided} \\
 \hline \hline
  Potentially Spoofed Source Routes & {Hides client identity from other clients, exit proxies, and CDN} \\
 \hline
@@ -187,7 +187,7 @@ the client can decrypt it because she knows $skey$.
 Using session keys allows for a performance optimization in sending responses back to clients.  Instead of sending 
 the encrypted response from the exit proxy back to the client via the set of peers used in the source route, the exit 
 proxy can send it in a multicast manner to all clients that were on the source route.  The only client that knows $skey$ 
-is the true client that originated the request, therefore none of the other clients can see the response, and it reduces the 
+is the true client that originated the request, therefore none of the other clients can interpret the response, and it reduces the 
 latency for sending the response to the client.  
 
 \subsection{Additional Options}
